tests/ui/parser/ferris-static-mut.rs
static mut ğŸ¦€: &str = "ferris!";//~ ERROR Ferris cannot be used as an identifier

fn main() {}
